Edit CSS to attempt solve of pagination next button in wrong place, attempted to wrap grip in row, pagination in a row and all in a container to enforce stacking, attempt unsuccessful but structure layout worth keeping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -273,7 +273,3 @@ body {
     width: 100%;
     height: 40px;
 }
-
-#dish-container-row {
-    position: relative;
-}
